unreferenced VM objects unconditionally instead of using a fixed
limit.

The physical page allocator of the X15 kernel has been integrated, and
is now used directly by the slab allocator.  This increases the kernel
heap addressing important scalability issues.

A synchronization mechanism was added, similar to the Linux futexes, to
allow efficient and powerful userland synchronization.

Version 1.6 (2015-10-31)

The code has been updated to work with newer versions of the compiler,
and numerous bugs have been fixed throughout the code.

The lock debugging infrastructure has been revived and improved, and
many locking issues have been fixed.

The IPC tables and the hash table mapping objects to IPC entries have
been replaced by radix trees.  This addresses a scalability issue, as
IPC tables required huge amounts of continuous virtual kernel memory.

The kernel now allows non-privileged users to wire a small amount of
memory.

A bug hindering the eviction of inactive pages by the pageout daemon
has been identified and fixed.

The kernel now keeps timestamps relative to the system boot time.
Among other things this fixes bogus uptime readings if the system time
is altered.

A reference leak in the exception handling mechanism has been
identified and fixed.

ANSI escape sequences are now handled when using `printf'.  This fixes
the formatting of messages printed by various Linux drivers.

Version 1.5 (2015-04-10)

Numerous cleanups and stylistic fixes of the code base.  Several
problems have been identified using static analysis tools and
subsequently been fixed.

A protected payload can now be associated with capabilities.  This
payload is attached by the kernel to delivered messages and can be
used to speed up the object lookup in the receiving task.

The kernel debugger can now parse ELF symbol tables, can be invoked
over serial lines, gained two new commands and has received usability
improvements.
