@@ -62,18 +62,19 @@ hardclock(iunit,        old_ipl, irq, ret_addr, regs)
 			    (regs->efl & EFL_VM) ||	/* user mode */
 			    ((regs->cs & 0x03) != 0),	/* user mode */
 #if defined(LINUX_DEV)
-			    FALSE			/* ignore SPL0 */
+			    FALSE,			/* ignore SPL0 */
 #else	/* LINUX_DEV */
-			    old_ipl == SPL0		/* base priority */
+			    old_ipl == SPL0,		/* base priority */
 #endif	/* LINUX_DEV */
-			    );
+			    regs->eip);			/* interrupted eip */
 	else
 	    /*
 	     * Interrupt from interrupt stack.
 	     */
 	    clock_interrupt(tick,			/* usec per tick */
 			    FALSE,			/* kernel mode */
-			    FALSE);			/* not SPL0 */
+			    FALSE,			/* not SPL0 */
+			    NULL);			/* interrupted eip */
 
 #ifdef LINUX_DEV
 	linux_timer_intr();
