@@ -14,6 +14,8 @@ heap addressing important scalability issues.
 
 A synchronization mechanism was added, similar to the Linux futexes, to
 allow efficient and powerful userland synchronization.
+
+Support for profiling kernel code from userland through sampling was added.
 
 Version 1.6 (2015-10-31)
 
